<resources>
    <string name="app_name">Nugraha Offset</string>
    <!--Pencarian-->
    <string name="search_bar">Lagi butuh apa?</string>
    <string name="search_hint">Cari produk favoritmu di sini</string>
    <!--Tombol-->
    <string name="save_button">Simpan</string>
    <string name="add_button">TAMBAHKAN KE KERANJANG</string>
    <string name="checkout_button">PROSES PEMBAYARAN</string>
    <string name="continue_button">LANJUTKAN</string>
    <!--checkout-->
    <string name="information_text">Informasi</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email_address">Email</string>
    <string name="no_hp">No. Handphone</string>
    <string name="address_hint">Alamat</string>
    <string name="comments_hint">Komentar Tambahan</string>
    <string name="date_shipping_hint">Tanggal Pengiriman</string>
    <string name="cost_details">Rincian Pembayaran</string>
    <string name="PPN_text">PPN</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="welcome">WELCOME</string>
    <string name="login">Login</string>
    <string name="email_string">Email</string>
    <string name="password_string">Masukan Password</string>
    <string name="forgot_password_string">Lupa Sandi?</string>
    <string name="daftar">Daftar</string>
    <string name="nama_string">Nama Lengkap</string>
    <string name="nohp_string">No HP</string>
    <string name="belum_punya_akun">Belum Punya Akun? Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun? Masuk</string>
    <string name="login_dengan_nomor_telepon">Log in dengan no. handphone</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Splash Screen-->
    <string name="Logo_text">Nugraha Offset</string>
    <string name="alamat_perusahaan"><b>Alamat Perusahaan</b>\n\nJln. Raya Dayeuhkolot N0.362, Kab. Bandung, Indonesia</string>
    <string name="desk_perusaan"><b>Sejarah Perusahaan</b>\n\nNugraha Offset adalah Home Industri yang bergerak di bidang percetakan yang khusus mencetak yasin, nota, undangan, kop surat, brosur, dll.\n\nNugraha Offset juga sudah berdiri selama 20 tahun dari tahun 2000 sampai sekarang masih konsisten dengan kualitasnya. Nugraha Offset sudah banyak Bekerja sama dengan perusahaan yang terkenal diantaranya: Pabrik Kahatex, Toko Buku Al-Huda, Bursa Buku Palasari dan Rumah Sakit Ibu dan Anak (Humana Prima).</string>
    <string name="kontak_perusahaan"><b>Kontak Perusahaan</b>\n\nNomor Telepon: 085220312934\nEmail: nugrahaoffset@gmail.com</string>
    <string name="otp_info">Kode OTP dikirim melalui <b>SMS</b> ke</string>
    <string name="otp_info_number"><b>+64 888-8888-8888</b></string>

</resources>